--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
+        "gulp": "^3.9.1",
+        "gulp-ruby-sass": "^2.1.1",
+        "gulp-uglify": "^3.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "gulp-livereload": "^3.8.1"
     }
 }
