--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "gulp": "^3.9.1",
+        "gulp-imagemin": "^4.0.0",
         "gulp-ruby-sass": "^2.1.1",
         "gulp-uglify": "^3.0.0",
         "jquery": "^3.2",
@@ -22,6 +23,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "gulp-autoprefixer": "^4.0.0",
         "gulp-livereload": "^3.8.1"
     }
 }
